--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "autoprefixer": "^10.4.2",
+    "framer-motion": "^6",
+    "nanoid": "^4.0.0",
     "next": "12.0.9",
+    "next-auth": "^4.13.0",
     "postcss": "^8.4.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "tailwindcss": "^3.0.18"
   },
   "devDependencies": {
